# vala-library-template

./: README.md  bootstrap-template.sh  init-local-vapi.sh  init.sh  meson.build
.github/workflows/: release.yml  template-bootstrap.yml
src/: library.vala  meson.build
subprojects/: vala_testcases.wrap
tests/: meson.build
